added function to purchase button, showing confirmation

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <form id="purchaseForm">
                 <label>
                     <span>Name</span>
-                    <input id="nameInput" type="text" name="name" placeholder="Name" value="name" required class="long-input">
+                    <input id="nameInput" type="text" name="name" placeholder="Name" required class="long-input">
                 </label>
                 <label>
                     <span>Lastname</span>
@@ -159,9 +159,9 @@
             </form>
         </section>
 
-        <section class="confirmation" id="confirmation">
+        <section class="confirmation hidden" id="confirmationSection">
             <p>Thanks for your purchase! No function yet!</p>
-            <button id="close-confirmation">Close</button>
+            <button id="closeConfirmationBtn">Close</button>
         </section>
 
         <footer></footer>
