added form reset and styled confirmation

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </section>
 
         <section class="confirmation hidden" id="confirmationSection">
-            <p>Thanks for your purchase! No function yet!</p>
+            <p>Thanks for your purchase!</p>
             <button id="closeConfirmationBtn">Close</button>
         </section>
 
