changed colors and styled buttons

--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
             <div class="sorting-container">
                 <h2>Sort & Categories</h2>
                 <div>
-                    <button class="sorting-btn" id="sortByNameBtn">Name</button>
-                    <button class="sorting-btn" id="sortByPriceBtn">Price</button>
-                    <button class="sorting-btn" id="sortByRatingBtn">Rating</button>
+                    <button class="sorting-btn btn" id="sortByNameBtn">Name</button>
+                    <button class="sorting-btn btn" id="sortByPriceBtn">Price</button>
+                    <button class="sorting-btn btn" id="sortByRatingBtn">Rating</button>
                 </div>
                 <div class="category-radios">
                     <label>
                         <span>Salty</span>
-                        <input type="radio" name="categoryFilter" id="saltyRadio" value="Salty">
+                        <input class="radioBtn" type="radio" name="categoryFilter" id="saltyRadio" value="Salty">
                     </label>
                     <label>
                         <span>Sweet</span>
-                        <input type="radio" name="categoryFilter" id="sweetRadio" value="Sweet">
+                        <input class="radioBtn" type="radio" name="categoryFilter" id="sweetRadio" value="Sweet">
                     </label>
                     <label>
                         <span>Vegan</span>
-                        <input type="radio" name="categoryFilter" id="veganRadio" value="Vegan">
+                        <input class="radioBtn" type="radio" name="categoryFilter" id="veganRadio" value="Vegan">
                     </label>
                     <label>
                         <span>Show All</span>
-                        <input type="radio" name="categoryFilter" id="allRadio" value="All" checked>
+                        <input class="radioBtn" type="radio" name="categoryFilter" id="allRadio" value="All" checked>
                     </label>
                 </div>
                 <div>
@@ -181,8 +181,8 @@
                         <span>Apply for our newsletter</span>
                     <input type="checkbox" name="checknews" checked>
                 </label>
-                <input class="reset" id="resetAllBtn" type="reset" value="Reset">
-                <input class="submit" id="purchaseBtn" type="submit" value="Make Purchase" disabled>
+                <input class="reset btn" id="resetAllBtn" type="reset" value="Reset">
+                <input class="submit btn" id="purchaseBtn" type="submit" value="Make Purchase" disabled>
             </form>
         </section>
 
