--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 <body>
     <main>
         <header>
-            <h1>Davids Cookies</h1>
-            <div class="cart-container">
-                <span id="cartIcon" class="material-symbols-outlined cart-icon">shopping_bag</span>
-                <div class="cart-amount-container" id="cartIconAmountContainer">
-                    <!-- Fyll på genom script -->
+            <a href="#mainSection"><h1>Davids Cookies</h1></a>
+            <a href="#cartSection">
+                <div class="cart-container">
+                    <span id="cartIcon" class="material-symbols-outlined cart-icon">shopping_bag</span>
+                    <div class="cart-amount-container" id="cartIconAmountContainer">
+                        <!-- Fyll på genom script -->
+                    </div>
                 </div>
-            </div>
+            </a>
         </header>
-        <section class="main-section">
+        <section id="mainSection" class="main-section">
             <div class="sorting-container">
                 <h2>Sort & Categories</h2>
                 <div>
@@ -64,7 +66,7 @@
                 <!-- Fyll från Javascript -->
             </div>
         </section>
-        <section class="cart-section">
+        <section id="cartSection" class="cart-section">
             <h2>Cart</h2>
             <div class="cart-container" id="cartContainer">
                 <!-- Fyll från Javascript -->
@@ -75,56 +77,56 @@
             <form id="purchaseForm">
                 <label>
                     <div>
-                        <span>Name</span>
+                        <span class="form-title">Name</span>
                         <p id="nameError" class="form-reminder">First name required</p>
                     </div>
                     <input id="nameInput" type="text" name="name" placeholder="Name" value="David" required class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Lastname</span>
+                        <span class="form-title">Lastname</span>
                         <p id="lastnameError" class="form-reminder">Last name required</p>
                     </div>
                     <input id="lastnameInput" type="text" name="lastname" placeholder="Lastname" value="lastname" required class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Address</span>
+                        <span class="form-title">Address</span>
                         <p id="addressError" class="form-reminder">Address required</p>
                     </div>
                     <input id="addressInput" type="text" name="address" placeholder="Street 1B" value="street 1" required class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Zip Code</span>
+                        <span class="form-title">Zip Code</span>
                         <p id="zipCodeError" class="form-reminder">Required Ex: 12345</p>
                     </div>
                     <input id="zipCodeInput" type="number" name="zipcode" placeholder="12345" value="12345" required class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Town</span>
+                        <span class="form-title">Town</span>
                         <p id="townError" class="form-reminder">Town required</p>
                     </div>
                     <input id="townInput" type="text" name="town" placeholder="Town" value="Town" required class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Door Code</span>
+                        <span class="form-title">Door Code</span>
                         <p class="form-reminde invisible">Door Code</p>
                     </div>
                     <input type="number" name="doorcode" placeholder="Optional" class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Phone</span>
+                        <span class="form-title">Phone</span>
                         <p id="phoneError" class="form-reminder">Required Ex: 555-0505000</p>
                     </div>
                     <input id="phoneInput" type="tel" id="phone" name="phone" placeholder="555-0505000" value="555-0505555" required class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Email</span>
+                        <span class="form-title">Email</span>
                         <p id="emailError" class="form-reminder">Required Ex: mail@mail.com</p>
                     </div>
                     <input id="emailInput" type="email" name="email" placeholder="mail@mail.com" value="mail@mail.com" required class="long-input">
@@ -167,18 +169,18 @@
                     </div>
                 </div>
                 <label>
-                    <span>Discount Code</span>
+                    <span class="form-title">Discount Code</span>
                     <input type="text" name="discountcode" id="discountcode" class="long-input">
                 </label>
                 <label>
                     <div>
-                        <span>Accept our terms</span>
+                        <span class="form-title">Accept our terms</span>
                         <p id="termsError" class="form-reminder">Accept terms is required</p>
                     </div>
                     <input id="termsCheckbox" type="checkbox" name="checkterms" required>
                 </label>
                 <label>
-                        <span>Apply for our newsletter</span>
+                        <span class="form-title">Apply for our newsletter</span>
                     <input type="checkbox" name="checknews" checked>
                 </label>
                 <input class="reset btn" id="resetAllBtn" type="reset" value="Reset">
