--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             <h2>Check Out</h2>
             <form id="purchaseForm">
                 <label>
-                    <span class="form-title">Name</span>
+                    <h4 class="form-title">Name</h4>
                     <input id="nameInput" type="text" name="name" placeholder="Name" required class="long-input">
                 </label>
                 <div class="reminder-con" id="nameError">
                     <span class="form-reminder">First name required</span>
                 </div>
                 <label>
-                    <span class="form-title">Lastname</span>
+                    <h4 class="form-title">Lastname</h4>
                     <input id="lastnameInput" type="text" name="lastname" placeholder="Lastname" required
                         class="long-input">
                 </label>
@@ -98,7 +98,7 @@
                     <span class="form-reminder">Last name required</span>
                 </div>
                 <label>
-                    <span class="form-title">Address</span>
+                    <h4 class="form-title">Address</h4>
                     <input id="addressInput" type="text" name="address" placeholder="Street 1B" required
                         class="long-input">
                 </label>
@@ -106,7 +106,7 @@
                     <span class="form-reminder">Address required</span>
                 </div>
                 <label>
-                    <span class="form-title">Zip Code</span>
+                    <h4 class="form-title">Zip Code</h4>
                     <input id="zipCodeInput" type="number" name="zipcode" placeholder="12345" required
                         class="long-input">
                 </label>
@@ -114,21 +114,21 @@
                     <span class="form-reminder">Required Ex: 12345</span>
                 </div>
                 <label>
-                    <span class="form-title">Town</span>
+                    <h4 class="form-title">Town</h4>
                     <input id="townInput" type="text" name="town" placeholder="Town" required class="long-input">
                 </label>
                 <div class="reminder-con" id="townError">
                     <span class="form-reminder">Town required</span>
                 </div>
                 <label>
-                    <span class="form-title">Door Code</span>
+                    <h4 class="form-title">Door Code</h4>
                     <input type="number" name="doorcode" placeholder="Optional" class="long-input">
                 </label>
-                <div class="reminder-con invisible">
-                    <span class="form-reminder">Town required</span>
+                <div class="reminder-con">
+                    <span class="form-reminder">Optional</span>
                 </div>
                 <label>
-                    <span class="form-title">Phone</span>
+                    <h4 class="form-title">Phone</h4>
                     <input id="phoneInput" type="tel" name="phone" placeholder="555-0505000" required
                         class="long-input">
                 </label>
@@ -136,7 +136,7 @@
                     <span class="form-reminder">Required Ex: 555-0505000</span>
                 </div>
                 <label>
-                    <span class="form-title">Email</span>
+                    <h4 class="form-title">Email</h4>
                     <input id="emailInput" type="email" name="email" placeholder="mail@mail.com" required
                         class="long-input">
                 </label>
@@ -147,23 +147,23 @@
                     <div class="selector">
                         <label>
                             <input type="radio" name="payment-option" value="card" checked>
-                            <span>Card</span>
+                            <h5>Card</h5>
                         </label>
                         <label>
                             <input type="radio" name="payment-option" id="invoiceInput" value="invoice">
-                            <span>Invoice</span>
+                            <h5>Invoice</h5>
                         </label>
                     </div>
                     <div class="option invoice hidden" id="invoice">
                         <label class="payment-input">
-                            <span>Swedish Personal ID</span>
+                            <h5>Swedish Personal ID</h5>
                             <input type="text" name="personal-id" id="personalID" placeholder="9307215914"
                                 class="long-input">
                         </label>
                     </div>
                     <div class="option card" id="card">
                         <label class="payment-input">
-                            <span>Card Number</span>
+                            <h5>Card Number</h5>
                             <input type="number" id="creditCardNumber" placeholder="5114496353984312"
                                 class="long-input">
                         </label>
@@ -179,24 +179,24 @@
                             </div>
                         </div>
                         <label class="payment-input">
-                            <span>CVC</span>
+                            <h5>CVC</h5>
                             <input type="number" placeholder="123" id="creditCardCvc" class="long-input">
                         </label>
                     </div>
                 </div>
                 <label class="discount-con">
-                    <span class="form-title">Discount Code</span>
+                    <h4 class="form-title">Discount Code</h4>
                     <input type="text" name="discountcode" id="discountcode" class="long-input">
                 </label>
                 <label>
-                    <span class="form-title">Accept our terms</span>
+                    <h5 class="form-title">Accept our terms</h5>
                     <input id="termsCheckbox" type="checkbox" name="checkterms" required>
                 </label>
                 <div class="reminder-con" id="termsError">
                     <span class="form-reminder">Accept terms is required</span>
                 </div>
                 <label>
-                    <span class="form-title">Apply for our newsletter</span>
+                    <h5 class="form-title">Apply for our newsletter</h5>
                     <input type="checkbox" name="checknews" checked>
                 </label>
                 <div class="button-row">
