accesibility fixes - aria labels and tab outlines

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
     <main>
         <header>
-            <a href="#productsContainer">
+            <a href="#productsContainer" aria-label="Go to Cookies">
                 <h1>Davids Cookies</h1>
             </a>
-            <a href="#cartSection">
+            <a href="#cartSection" aria-label="Go to shopping cart" class="cart-link">
                 <div class="cart-container">
                     <span id="cartIcon" class="material-symbols-outlined cart-icon">shopping_bag</span>
                     <div class="cart-amount-container" id="cartIconAmountContainer">
@@ -212,7 +212,8 @@
             <button class="btn" id="closeConfirmationBtn">Close</button>
         </section>
 
-        <footer></footer>
+        <footer>
+        </footer>
     </main>
     <script type="module" src="main.mjs"></script>
 </body>
