added darkmode button and styling

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
             <a href="#productsContainer" aria-label="Go to Cookies">
                 <h1>Davids Cookies</h1>
             </a>
+            <button id="themetoggle" class="themeBtn">
+                <span class="material-symbols-outlined">
+                    dark_mode
+                </span>
+            </button>
             <a href="#cartSection" aria-label="Go to shopping cart" class="cart-link">
-                <div class="cart-container">
+                <div class="cart-icon-container">
                     <span id="cartIcon" class="material-symbols-outlined cart-icon">shopping_bag</span>
                     <div class="cart-amount-container" id="cartIconAmountContainer">
                         <!-- Fyll på genom script -->
